tests/frontend/fail/array/array_atomic_assignment.act
contract B

constructor()

creates

  uint[2] y := 3
